--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "symfony/filesystem": "^3.3",
-    "php": "^5.6"
+    "composer/composer": "^1.4"
   },
   "autoload": {
     "psr-4": {
