--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
   "keywords": [ "composer", "script", "symlink" ],
   "homepage": "https://github.com/imageinabox/composer-symlinks/",
   "authors": [
-    {
-      "name": "Image in a Box",
-      "email": "support@imageinabox.com"
-    }
+    { "name": "Image in a Box", "email": "support@imageinabox.com" }
   ],
   "require": {
     "php": "^5.6",
     "symfony/filesystem": "^3.3"
+  },
+  "require-dev": {
+    "composer/composer": "^1.0@dev"
   },
   "autoload": {
     "psr-4": {
