--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     { "name": "Image in a Box", "email": "support@imageinabox.com" }
   ],
   "require": {
-    "php": "^5.6",
+    "php": ">=7.2.1|^5.6",
     "symfony/filesystem": "^3.3"
   },
   "require-dev": {
